add class for getElementByClass

--- a/DOM.html
+++ b/DOM.html
@@ -8,11 +8,11 @@
 <body>
     
 
-    <h1 id="heading1">This is heading  1</h1>
+    <h1 id="heading1" >This is heading  1</h1>
     <h1 id="heading2">This is heading  2</h1>
 
 
-    <p id="para" >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis dolore officia aperiam sapiente laborum accusantium mollitia, facilis fuga ea ex tempora consectetur? Voluptas labore velit iste tempore. Ipsum, voluptatum molestiae.</p>
+    <p id="para" class="para1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis dolore officia aperiam sapiente laborum accusantium mollitia, facilis fuga ea ex tempora consectetur? Voluptas labore velit iste tempore. Ipsum, voluptatum molestiae.</p>
 
     <script src="DOM.js"></script>
 </body>
