learn query selector using id and class

--- a/querySelector.html
+++ b/querySelector.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <p id="pid">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro quaerat qui eum harum, libero explicabo unde ipsa voluptates? Aut quae rem soluta, nihil tenetur necessitatibus commodi repudiandae est ullam repellendus.</p>
+    <p id="pid" class="pidc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro quaerat qui eum harum, libero explicabo unde ipsa voluptates? Aut quae rem soluta, nihil tenetur necessitatibus commodi repudiandae est ullam repellendus.</p>
 
     <script src="querySelector.js"></script>
 </body>
