learn querySelectorAll method

--- a/querySelector.html
+++ b/querySelector.html
@@ -9,6 +9,21 @@
     
     <p id="pid" class="pidc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro quaerat qui eum harum, libero explicabo unde ipsa voluptates? Aut quae rem soluta, nihil tenetur necessitatibus commodi repudiandae est ullam repellendus.</p>
 
+    <a href="#">Home</a>
+
+    <ul>
+        <li><a href="#">Tutorial</a></li>
+        <li>Bangladesh</li>
+    </ul>
+
+    <div class="my-div">
+        <a href="#">Contact</a>
+    </div>
+
+
+    <p>This is para 1</p>
+    <p>This is para 2</p>
+
     <script src="querySelector.js"></script>
 </body>
 </html>
