add images on onclick event

--- a/EventHandler.html
+++ b/EventHandler.html
@@ -8,11 +8,19 @@
 <body>
     
 
-    <!-- <button type="button" onclick="alert('Hello')" >Click Me</button> -->
-    <button type="button" onclick="myMessage()" >Click Me</button> <br>
+    <button type="button" onclick="alert('Hello')" >Click Me</button>
+    <button type="button" onclick="myMessage()" >Click Me</button> <br> <br>
     <button type="button" onclick="myMessage2()" >Click Me 2</button>
 
     <p onclick="myMessage3()"> Lorem ipsum dolor sit amet.</p>
+
+    <p id="para"> Lorem ipsum dolor sit amet.</p>
+
+    <button type="button" onclick="myPicture1()" >Me</button> <br><br> 
+    <button type="button" onclick="myPicture2()" >Me too</button> 
+
+    <img id="myImage" src="#" alt="" height="300" width="300">
+
     
 
     <script src="EventHandler.js"></script>
