add Creating html element using js

--- a/DOMchangingElement.html
+++ b/DOMchangingElement.html
@@ -9,7 +9,7 @@
     
     <a href="#">Visit Google</a>
 
-    <div class="my-div" style="background-color: brown">
+    <div id="my-div" style="background-color: brown">
         <h1>Hello</h1>
         <h1>Good bye</h1>
     </div>
