make a image slider using html and JS

--- a/imageSlider.html
+++ b/imageSlider.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     
+    <button onclick="prev()">Previous</button>
+    <img src="images/my .jpg" alt="" height="300" width="500">
+    <button onclick="next()">Next</button>
 
     <script src="imageSlider.js"></script>
 </body>
