changing html using JS insted of css

--- a/ChangingCss.html
+++ b/ChangingCss.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     
+    <p id="paraId">This is paragraph</p>
+    <button onclick="addStyle()">add style</button>
+    <button>remove style</button>
 
     <script src="ChangingCss.js"></script>
 </body>
