changing html style using css class in JS

--- a/ChangingCss.html
+++ b/ChangingCss.html
@@ -9,8 +9,9 @@
 <body>
     
     <p id="paraId">This is paragraph</p>
+    <p id="para2Id">This is Paragraph 2</p>
     <button onclick="addStyle()">add style</button>
-    <button>remove style</button>
+    <button onclick="removeStyle()">remove style</button>
 
     <script src="ChangingCss.js"></script>
 </body>
