Add Remove Animation file

--- a/eventListenerMultiple.html
+++ b/eventListenerMultiple.html
@@ -14,6 +14,8 @@
     <button class="myButton">button 2</button>
     <button class="myButton">button 3</button>
 
+    div*3>h2{Room-$}+p{staying some one}
+
 
 
     <script src="eventListenerMultiple.js"></script>
