--- a/addRemoveAnimation.html
+++ b/addRemoveAnimation.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="addRemoveAnimation.css">
     <title>Add & Remove Animation</title>
 </head>
 <body>
+
+    <button class="myButton a">a</button>
+    <button class="myButton b">b</button>
+    <button class="myButton c">c</button>
     
+
+    <script src="addRemoveAnimation.js"></script>
 </body>
 </html>
