--- a/addRemoveAnimation.html
+++ b/addRemoveAnimation.html
@@ -11,6 +11,9 @@
     <button class="myButton a">a</button>
     <button class="myButton b">b</button>
     <button class="myButton c">c</button>
+
+
+    <p>This is a demo</p>
     
 
     <script src="addRemoveAnimation.js"></script>
