--- a/addRemoveAnimation.html
+++ b/addRemoveAnimation.html
@@ -13,6 +13,7 @@
     <button class="myButton c">c</button>
 
 
+    <textarea name="" id="" cols="30" rows="10"></textarea>
     <p>This is a demo</p>
     
 
