--- a/EventObject.html
+++ b/EventObject.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Object</title>
 </head>
-<body>
+<body style="height: 150vh;">
     
 
     <script src="EventObject.js"></script>
