--- a/EventObject.html
+++ b/EventObject.html
@@ -7,7 +7,13 @@
 </head>
 <body style="height: 150vh;">
     
+    <details>
+
+        <summary>Arefin</summary>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, corporis.</p>
+    </details>
 
     <script src="EventObject.js"></script>
+
 </body>
 </html>
