Learned BOM location object

--- a/BOMLocationObject.html
+++ b/BOMLocationObject.html
@@ -8,6 +8,16 @@
 </head>
 <body>
   
+  <h1>BOM</h1>
+  <div class="location-div">
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+  </div>
+
+  <button id="visit-button">Visit my webpage</button>
 
   <script src="BOMLocationObject.js"></script>
 </body>  
