--- a/BOMTimingEvent.html
+++ b/BOMTimingEvent.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   
+  <button class="save-button">Save</button>
+  <p class="message"></p>
 
   <script src="BOMTimingEvent.js"></script>
 </body>
