--- a/BOMcreateClock.html
+++ b/BOMcreateClock.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   
+  <button class="save-button">Save</button>
+  <p class="message"></p>
 
+  
   <script src="BOMcreateClock.js"></script>
 </body>
 </html>
