error handle show alert button

--- a/ErrorHandel.html
+++ b/ErrorHandel.html
@@ -6,6 +6,9 @@
   <title>Error Handel</title>
 </head>
 <body>
+
+  <input type="text" id="numTextfield">
+  <button id="checkButton">check</button>
   
 
   <script src="ErrorHandel.js"></script>
