--- a/ErrorHandel.html
+++ b/ErrorHandel.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+  <p>Enter a number between 5 to 10 :</p>
   <input type="text" id="numTextfield">
   <button id="checkButton">check</button>
   
