Learned Arrow function with some example

--- a/ArrowFunction_ES6.html
+++ b/ArrowFunction_ES6.html
@@ -24,8 +24,20 @@
   //  const display2 = () => console.log("Display Arrow function");
    display2();
 
-   
+   const message = () => "Hi I am Message.."
+   console.log(message());
 
+   //uses of parameter pasing in regular functin & arrow function 
+   
+   //regular Function
+   function add1(num1, num2){
+    return num1+num2;
+   }
+   console.log(add1(10,20));
+
+   //Arrow Function
+   const add2 = (num1, num2) => num1+num2;
+   console.log(add2(20,30))
   </script>
 </body>
 </html>
